--- a/Lab 2.html
+++ b/Lab 2.html
@@ -5,7 +5,7 @@
         <title>Victoria Heritage Buildings</title>
         <meta name='viewport' content='width=device-width, initial-scale=1' />
         <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v2.13.0/mapbox-gl.js'></script>
-        <script src="https://github.com/knmcintyre/Lab2/blob/main/City_Boundary.geojson"></script>
+        <script src="City_Boundary.geojson"></script>
         <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.13.0/mapbox-gl.css' rel='stylesheet' />
         <style>
           body { 
