--- a/Lab 2.html
+++ b/Lab 2.html
@@ -40,7 +40,7 @@
             line-height: 1.5; 
             box-shadow: 0 1px 2px rgba(0,0,0,0.10);
           }
-        .legend-symbol-line{
+          .legend-symbol-line{
             display: inline-block;
             width: 20px;
             height: 5px;
@@ -83,7 +83,8 @@
             interactive: false
         });
         //add marker to the inset map
-        new mapboxgl.Marker().setLngLat([-123.3656, 48.4284]).addTo(insetMap);
+        new mapboxgl.Marker()
+            .setLngLat([-123.3656, 48.4284]).addTo(insetMap);
         
         map.on('load', function(){
             map.addSource('city-boundary',{ 
@@ -113,9 +114,11 @@
                 return;
             }
             const feature = features[0];
+            console.log('I am clicking on a polygon, not a single point:')
+            console.log(feature.geometry.coordinates);
             //pop up
             const popup = new mapboxgl.Popup({ offset: [0, -15]}) 
-            .setLngLat(feature.geometry.coordinates) //this is the problem!!!
+            .setLngLat(feature.geometry.coordinates[0][0]) //this is the problem!!!
             .setHTML('<h3>'+feature.properties.Building+'</h3>') //specific to the file
             .addTo(map);
             });
