--- a/Lab 2.html
+++ b/Lab 2.html
@@ -63,7 +63,7 @@
         <div id='inset-map'></div>
         <div id='legend'>
             <h4>Legend:</h4>
-            <div><span class="legend-symbol-line" style='background-color: #F5A33A'></span> City Boundary</div>
+            <div><span class="legend-symbol-line" style='background-color: #FF8C00 '></span> City Boundary</div>
         </div>
         <script>
         // The value for 'accessToken' begins with 'pk...'
@@ -96,7 +96,7 @@
                 'type': 'line',
                 'source': 'city-boundary',
                 'paint': {
-                    'line-color': '#F5A33A', //choose an appropriate colour that stands our against the basemap
+                    'line-color': '#FF8C00 ', //choose an appropriate colour that stands our against the basemap
                     'line-width': 2
                 },
                 'layout':{
